# dcu-cmap-service

./: .envrc  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-compose.yml  gddy-requirements.txt  graphql_api_dynamic.py  kubetipper.sh  logging.yml  private_pips.txt  pyproject.toml  requirements.txt  run.py  runserver.sh  settings.py  setup.py  tartufo.toml  test_requirements.txt  uwsgi.ini  uwsgi_ssl.ini
.github/workflows/: ci.yaml  ci.yml  cicd-role-cred-sync.yml  k8s-deploy.yml
k8s/base/: cmap-persistent-redis-service.yaml  cmap-persistent-redis.yaml  cmap-redis-pvc.yaml  cmap-service-redis.deployment.yaml  cmap-service-redis.service.yaml  cmap_service.deployment.yaml  kustomization.yaml  (+1 more)
service/: alexa.py  angelo_api.py  brand_detection_helper.py  classlogger.py  crm_client_api.py  diablo_api.py  enrichment.py  functions.py  gocentral.py  graph_ql.py  hostenv_helper.py  knox_api.py  mwpone_api.py  mwptwo.py  nic_client.py  redis_cache.py  reg_db_api.py  request_transport.py  shopper_api.py  subscriptions_api.py  tz_api.py  vertigo_api.py  vip_clients.py  whois_query.py
tests/: cndns_tests.py  current_full_query.txt  data.json  diablo_whmcs_tests.py  dynamic.py  enrichment_tests.py  entitlements_tests.py  functions_tests.py  getBrett.py  graphql_api.py  graphql_api_unpack.py  graphql_q.py  hostname_parser_tests.py  lance_query.txt  mwp_tests.py  netbox_tests.py  query.txt  run.py.old  schema.json  service.tar  subscriptions_tests.py  subscriptionsshim_tests.py  toolzilla_tests.py  vps4_tests.py  whois_tests.py
(+103 files in other folders)
