[tool.poetry]
name = "cmap"
version = "0.1.0"
description = ""
authors = ["htracey-godaddy <htracey@godaddy.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.1"
appdirs = "^1.4.4"
cached-property = "^1.5.2"
celery = "5.2.6"
certifi = "2023.7.22"
cffi = "1.14.5"
chardet = "4.0.0"
defusedxml = "0.7.1"
dnspython = "2.1.0"
flask = "2.3.2"
flask-graphql = "2.0.1"
graphene = "2.1.9"
idna = "2.10"
isodate = "0.6.0"
lxml = "4.9.1"
ntlm-auth = "1.5.0"
promise = "2.3"
pycparser = "2.20"
uwsgi = "2.0.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
